tests/gabc-dump/should-fail/first-clefchange.gabc
name: first clefchange;
%%
(c4) x(c3)
